--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,18 +1,4 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+
 
 #num_button{
     width: 50px;
@@ -27,8 +13,16 @@
 }
 
  #text_button {
+     width: 74px;
+     height: 3em;
+     font-size: 16px;
+     border: green 4px solid;
+ }
+
+ #start_button {
      width: 150px;
      height: 5em;
      font-size: 16px;
-     border: green 4px solid;
+     border: orange 4px solid;
+     text-align: center;
  }
